package problems.Order_Inventory_Management_Sysyem_Zepto;

import java.util.List;

public class NearestWarehouseSelectionStrategy extends WarehouseSelectionStrategy{
    @Override
    public Warehouse selectWarehouse(List<Warehouse> warehouseList) {
        return null;
    }
}
