package problems.Order_Inventory_Management_Sysyem_Zepto;

public enum OrderStatus {
    DELIVERED,
    CANCELLED,
    RETURNED,
    UNDELIVERED;

}
