package problems.Order_Inventory_Management_Sysyem_Zepto;

public interface PaymentMode {
     boolean makePayment();
}
