package problems.Order_Inventory_Management_Sysyem_Zepto;

public class Product {
    int productId;
    String productName;

}
