package problems.Order_Inventory_Management_Sysyem_Zepto;

public class UPIPaymentMode implements PaymentMode{

    @Override
    public boolean makePayment() {
        return true;
    }
}
